--- a/public/index.html
+++ b/public/index.html
@@ -20,30 +20,72 @@
   <script src='static/Chart.Core.min.js'></script>
   <script src="static/Chart.Scatter.min.js"></script>
 
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" />
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/1.2.0/ui-bootstrap-tpls.js"></script>
+
+  <script src="https://rawgit.com/Gillardo/bootstrap-ui-datetime-picker/master/dist/datetime-picker.js"></script>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-animate.js"></script>
+
   <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
   <div id="top" class="box">
     <h1>Ranking Chart</h1>
-    <h2 id="curr">Current Ranking</h2>
-    <br></br>
+    <h3 id="curr">Current Ranking</h3>
+    <br>
     <canvas id="chart"></canvas>
+    <br></br>
+    <h4>Add data</h4>
+    <p id="add">Score</p>
+    <input id="userscore" placeholder="#" class="score">
+    <p id="add">Points to next bracket</p>
+    <input id="pointstonext" placeholder="#" class="score">
+    <p id="add">Percent</p>
+    <input id="percent" placeholder="#" class="score">
+
+    <p id="add">Date and Time Score Achieved</p>
+    <p id="small">By default, the date and time is current. Leave this field alone if you are recording data from the past ~15 minutes.</p>
+    <form class="form-horizontal">
+      <div class="form-group">
+        <div class="col-sm-10">
+          <p class="input-group">
+            <input type="text" class="form-control" datetime-picker="MM/dd/yyyy HH:mm" ng-model="ctrl.picker3.date"
+              is-open="ctrl.picker3.open" />
+            <span class="input-group-btn">
+              <button type="button" class="btn btn-default" ng-click="ctrl.openCalendar($event, 'picker3')"><i
+                  class="fa fa-calendar"></i></button>
+            </span>
+          </p>
+        </div>
+      </div>
+    </form>
+
+    <p></p>
+    <button>Submit</button>
 
     <!-- <a target="_blank" href="https://firebase.google.com/docs/hosting/">Open Hosting Documentation</a> -->
   </div>
   <div id="login" class="box">
     <h1>Login</h1>
-    <p>You'll only need to login if you are planning on administrating this database. Contact fluff#2368 for more info.</p>
+    <p>You'll only need to login if you are planning on administrating this database. Contact fluff#2368 for more info
+      (and to setup an account).</p>
     <div class="container">
-      <input id="user" type="email" placeholder="Email">
-      <input id="pass" type="password" placeholder="Password">
+      <input id="user" type="email" placeholder="Email" class="login">
+      <input id="pass" type="password" placeholder="Password" class="login">
+      <p id="infoLogin"></p>
       <button id="loginBtn">Login</button>
+      <button id="logoutBtn">Logout</button>
     </div>
   </div>
+  <div id="admin" class="box"></div>
   <p id="bottom">made by fluff#2368</p>
 
   <script defer src="app.js"></script>
+  <script defer src="time.js"></script>
 </body>
 
 </html>
