--- a/public/index.html
+++ b/public/index.html
@@ -20,15 +20,7 @@
   <script src='static/Chart.Core.min.js'></script>
   <script src="static/Chart.Scatter.min.js"></script>
 
-  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" />
-  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" />
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/1.2.0/ui-bootstrap-tpls.js"></script>
-
-  <script src="https://rawgit.com/Gillardo/bootstrap-ui-datetime-picker/master/dist/datetime-picker.js"></script>
-
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-animate.js"></script>
-
+  <script src="jquery.js"></script>
   <link rel="stylesheet" href="main.css">
 </head>
 
@@ -40,35 +32,22 @@
     <canvas id="chart"></canvas>
     <br></br>
     <h4>Add data</h4>
-    <p id="add">Score</p>
-    <input id="userscore" placeholder="#" class="score">
-    <p id="add">Points to next bracket</p>
-    <input id="pointstonext" placeholder="#" class="score">
-    <p id="add">Percent</p>
-    <input id="percent" placeholder="#" class="score">
+    <p>You do not need an account to submit data. Please do not abuse this feature.</p>
+    <p class="add">Score</p>
+    <input id="userscore" placeholder="#" class="score" type="number" min="0" max="999999">
+    <p class="add">Points to next bracket</p>
+    <input id="pointstonext" placeholder="#" class="score" type="number" min="0" max="999999">
+    <p class="add" id="percentlabel"></p>
+    <input id="percent" placeholder="#" class="score" type="number" min="0" max="99" step="0.1">
 
-    <p id="add">Date and Time Score Achieved</p>
-    <p id="small">By default, the date and time is current. Leave this field alone if you are recording data from the past ~15 minutes.</p>
-    <form class="form-horizontal">
-      <div class="form-group">
-        <div class="col-sm-10">
-          <p class="input-group">
-            <input type="text" class="form-control" datetime-picker="MM/dd/yyyy HH:mm" ng-model="ctrl.picker3.date"
-              is-open="ctrl.picker3.open" />
-            <span class="input-group-btn">
-              <button type="button" class="btn btn-default" ng-click="ctrl.openCalendar($event, 'picker3')"><i
-                  class="fa fa-calendar"></i></button>
-            </span>
-          </p>
-        </div>
-      </div>
-    </form>
+    <p class="add">Date and Time Recorded</p>
+    <p id="small">Enter this information as it is in YOUR TIMEZONE.</p>
+    <input id="datetime" type="datetime-local" class="time">
 
-    <p></p>
-    <button>Submit</button>
+    <button id="submitdata">Submit Data</button>
+    <p id="submitvalid"></p>
 
-    <!-- <a target="_blank" href="https://firebase.google.com/docs/hosting/">Open Hosting Documentation</a> -->
-  </div>
+    </div>
   <div id="login" class="box">
     <h1>Login</h1>
     <p>You'll only need to login if you are planning on administrating this database. Contact fluff#2368 for more info
@@ -81,11 +60,32 @@
       <button id="logoutBtn">Logout</button>
     </div>
   </div>
-  <div id="admin" class="box"></div>
+  <div id="admin" class="box" style="display:none;">
+    <h1>Admin Panel</h1>
+    <p>Push update each time you change a value, before you move on to the next section.</p>
+    <h4>Edit Ranking Title</h4>
+    <input id="title" placeholder="X Tournament" class="login">
+    <button id="updateTitle">Update Title</button>
+    <p></p>
+    <h4>Edit Start Date</h4>
+    <input id="datetimeADMIN" type="datetime-local" class="time">
+    <button id="updateDate">Update Date</button>
+    <p></p>
+    <h4>Edit JP Crown Data</h4>
+    <p>Formatted in your time zone. Enter data every 12 hours from <a href="https://takenama.hatenablog.com/" target="_blank">Takenama's blog</a></p>
+    
+    <table id="jptable" style="width:80%">
+      <tr>
+        <th>Date</th>
+        <th>Score</th>
+      </tr>
+    </table>
+    <p></p>
+    <button id="updateJP">Update JP Crown Data</button>
+  </div>
   <p id="bottom">made by fluff#2368</p>
 
   <script defer src="app.js"></script>
-  <script defer src="time.js"></script>
 </body>
 
 </html>
