--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
   <div id="top" class="box">
     <h1>Ranking Chart</h1>
     <h3 id="curr">Current Ranking</h3>
+    <p><a id="guide">Ranking Guide</a></p>
     <br>
     <div id="chart-legend"></div>
     <p></p>
@@ -91,6 +92,10 @@
     <p class="add">Tick count</p>
     <input id="tick" placeholder="#" class="score" type="number">
     <button id="editgraph">Update graph</button>
+    <p></p>
+    <h4>Edit Guide Link</h4>
+    <input id="guideval" placeholder = "https://docs.google.com/document/d/..." class="login">
+    <button id="guidelink">Update Guide Link</button>
     <p></p>
     <h4>Edit JP Crown Data</h4>
     <p>Formatted in your time zone. Enter data every 12 hours from <a href="https://takenama.hatenablog.com/"
