--- a/public/index.html
+++ b/public/index.html
@@ -104,6 +104,8 @@
     <input id="min" placeholder="#" class="score" type="number">
     <p class="add">Tick count</p>
     <input id="tick" placeholder="#" class="score" type="number">
+    <p class="add">Tick spacing</p>
+    <input id="tickspace" placeholder="#" class="score" type="number">
     <button id="editgraph">Update graph</button>
     <p></p>
     <h4>Edit Guide Link</h4>
