--- a/public/index.html
+++ b/public/index.html
@@ -70,7 +70,7 @@
   </div>
   <div id="login" class="box">
     <h1>Login/Signup</h1>
-    <p>You only need an account if you plan on updating this database regularly. Otherwise, please post your
+    <p>You only need an account if you plan on updating this database regularly (in other words, you have an account that regularly tracks crown/medal). Otherwise, please post your
       crown/rainbow medal cutoffs to the cutoff channel of <a href="https://discord.gg/pad"
         target="_blank">the PAD Community
         Discord</a>.</p>
