responsive size of chart

--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,9 @@
     <p><a id="guide">Ranking Guide</a><br><br><a id="past" href="past.html">Past Charts</a></p>
     <div id="chart-legend"></div>
     <p></p>
-    <canvas id="chart"></canvas>
+    <div class="chart-container" style="position: relative; height:500px; width:95%; margin:auto;">
+      <canvas id="chart"></canvas>
+    </div>
     <br></br>
     <button id="export">Export as image</button>
     <p id="need">You need a verified account to submit data.</p>
