easier editing of max y value

--- a/public/index.html
+++ b/public/index.html
@@ -118,6 +118,7 @@
     <input onClick="this.select();" id="tick" placeholder="#" class="score" type="number">
     <p class="add">Tick spacing</p>
     <input onClick="this.select();" id="tickspace" placeholder="#" class="score" type="number">
+    <p id="calcmax">Calculated max value: </p>
 
     <p></p>
     <h4>Edit Guide Link</h4>
