--- a/public/past.html
+++ b/public/past.html
@@ -8,13 +8,8 @@
 
     <!-- update the version number as needed -->
     <script defer src="/__/firebase/8.1.2/firebase-app.js"></script>
-    <!-- include only the Firebase features as you need -->
     <script defer src="/__/firebase/8.1.2/firebase-database.js"></script>
     <script defer src="/__/firebase/8.1.2/firebase-auth.js"></script>
-    <!-- 
-      initialize the SDK after all desired features are loaded, set useEmulator to false
-      to avoid connecting the SDK to running emulators.
-    -->
     <script defer src="/__/firebase/init.js?useEmulator=true"></script>
 
     <script src='static/Chart.Core.min.js'></script>
@@ -22,6 +17,7 @@
 
     <script src="jquery.js"></script>
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="icon" href="poopcrown.ico" />
     <meta name="google-site-verification" content="1eMV9opKWd95mYPWXQuK24EXuqtBIy1_io_NQVPLXHM" />
     <meta name="keywords"
@@ -39,7 +35,8 @@
         <p></p>
         <div id="allpast"></div>
     </div>
-    <p id="bottom">made by fluff#2368</p>
+    <p class="bottom">made by fluff#2368</p>
+    <p class="bottom"><a href="https://github.com/ethannp/ranking-chart" target="_blank"><i class="fa fa-github" style="font-size: 20px;"></i></a></p>
 
     <script defer src="past.js"></script>
 </body>
