Dark mode option

--- a/public/index.html
+++ b/public/index.html
@@ -17,17 +17,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>PAD Ranking Chart</title>
-  <script defer src="/__/firebase/8.1.2/firebase-app.js"></script>
-  <script defer src="/__/firebase/8.2.10/firebase-analytics.js"></script>
-  <!-- include only the Firebase features as you need -->
-  <script defer src="/__/firebase/8.1.2/firebase-database.js"></script>
-  <script defer src="/__/firebase/8.1.2/firebase-auth.js"></script>
-  <script defer src="/__/firebase/init.js?useEmulator=true"></script>
-
-  <script src='static/Chart.Core.min.js'></script>
-  <script src="static/Chart.Scatter.min.js"></script>
-
-  <script src="jquery.js"></script>
+  <script>
+    // Render blocking JS:
+    if (localStorage.theme) document.documentElement.setAttribute("data-theme", localStorage.theme);
+  </script>
   <link rel="stylesheet" href="main.css">
   <link rel="icon" href="poopcrown.ico" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
@@ -40,6 +33,9 @@
 
 <body>
   <div id="top" class="box">
+    <div class="toggle-container">
+      <input type="checkbox" id="switch" name="theme" /><label for="switch">Toggle</label>
+    </div>
     <h1>PAD Ranking Chart</h1>
     <h3 id="curr">Current Ranking</h3>
     <p id="note"></p>
@@ -85,6 +81,8 @@
       <p style="color:red;" id="loginStatus"></p>
       <p id="enterinfo">Enter information above then <a onclick="createAcc()"><u>click here to create an
             account.</u></a></p>
+      <p id="forgot" style="margin-bottom:0px;margin-top:0px;display:inline-block;">Forgot your password? Message me
+        @fluff#2368 on Discord for a password reset link.</p>
 
     </div>
   </div>
@@ -132,7 +130,8 @@
         target="_blank">Takenama's blog</a> or this <a href="https://twitter.com/0102_ro/media" target="_blank">Twitter
         account</a> (good luck)</p>
     <p class="add">Propagate value:</p>
-    <input onClick="this.select();" class="score" type="number" id="prop" placeholder="#" style="display:inline-block; margin-right:20px;"> 
+    <input onClick="this.select();" class="score" type="number" id="prop" placeholder="#"
+      style="display:inline-block; margin-right:20px;">
     <button id="propBtn" stlye="display:inline-block;">Propagate</button>
 
     <table id="jptable" style="width:80%">
@@ -145,8 +144,21 @@
     <button id="updateAll">Save edits</button>
   </div>
   <p class="bottom">made by fluff#2368</p>
-  <p class="bottom"><a href="https://github.com/ethannp/ranking-chart" target="_blank"><i class="fa fa-github" style="font-size: 20px;"></i></a></p>
+  <p class="bottom"><a href="https://github.com/ethannp/ranking-chart" target="_blank"><i class="fa fa-github"
+        style="font-size: 20px;"></i></a></p>
 
+
+  <script defer src="/__/firebase/8.1.2/firebase-app.js"></script>
+  <script defer src="/__/firebase/8.2.10/firebase-analytics.js"></script>
+  <!-- include only the Firebase features as you need -->
+  <script defer src="/__/firebase/8.1.2/firebase-database.js"></script>
+  <script defer src="/__/firebase/8.1.2/firebase-auth.js"></script>
+  <script defer src="/__/firebase/init.js?useEmulator=true"></script>
+
+  <script src='static/Chart.Core.min.js'></script>
+  <script src="static/Chart.Scatter.min.js"></script>
+
+  <script src="jquery.js"></script>
   <script defer src="app.js"></script>
 </body>
 
