--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,8 @@
 <body>
   <div id="top" class="box">
     <div class="toggle-container">
-      <input type="checkbox" id="switch" name="theme" /><label for="switch">Toggle</label>
+      <input type="checkbox" id="switch" name="theme" /><label for="switch">Toggle</i>
+      </label>
     </div>
     <h1>PAD Ranking Chart</h1>
     <h3 id="curr">Current Ranking</h3>
