update discord username

--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
       <input id="datetime" type="datetime-local" class="time">
 
       <button id="submitdata">Submit Data</button>
-      <p>If you've added a data point with an error, please dm me @fluff#2368</p>
+      <p>If you've added a data point with an error, please dm me @flfff</p>
       <p style="color:red;" id="submitvalid"></p>
     </div>
 
@@ -83,7 +83,7 @@
       <p id="enterinfo">Enter information above then <a onclick="createAcc()"><u>click here to create an
             account.</u></a></p>
       <p id="forgot" style="margin-bottom:0px;margin-top:0px;display:inline-block;">Forgot your password? Message me
-        @fluff#2368 on Discord for a password reset link.</p>
+        @flfff on Discord for a password reset link.</p>
 
     </div>
   </div>
@@ -144,7 +144,7 @@
     <p></p>
     <button id="updateAll">Save edits</button>
   </div>
-  <p class="bottom">made by fluff#2368</p>
+  <p class="bottom">made by fluff</p>
   <p class="bottom"><a href="https://github.com/ethannp/ranking-chart" target="_blank"><i class="fa fa-github"
         style="font-size: 20px;"></i></a></p>
 
