--- a/public/past.html
+++ b/public/past.html
@@ -30,7 +30,7 @@
         <p></p>
         <div id="allpast"></div>
     </div>
-    <p class="bottom">made by fluff#2368</p>
+    <p class="bottom">made by fluff</p>
     <p class="bottom"><a href="https://github.com/ethannp/ranking-chart" target="_blank"><i class="fa fa-github" style="font-size: 20px;"></i></a></p>
 
     <script defer src="/__/firebase/8.1.2/firebase-app.js"></script>
