let any admin save data

--- a/public/index.html
+++ b/public/index.html
@@ -90,7 +90,7 @@
   <div id="admin" class="box" style="display:none;">
     <h1>Admin Panel</h1>
     <p>Don't forget to save edits at the bottom.</p>
-    <div id="enddiv" style="display:none;">
+    <div id="enddiv">
       <h4>Save Ranking</h4>
       <p>Saves all data into a past chart</p>
       <button id="endrank">Save Ranking</button>
